# CharacterStone

./: .gitignore  CMakeLists.txt  README.md  Slave.h  Slave_Init_Statechart.drawio
Slave/: LICENSE  Makefile
tool_src/: .gitignore  CMakeLists.txt  Makefile  generic-avr-gcc.cmake
tool_src/IR_Decoder/: IR_Decoder.c  IR_Decoder.h
tool_src/IR_Encoder/: IR_Encoder.c  IR_Encoder.h
tool_src/Master/: Master.c  master.c
tool_src/Slave/: Main.c  Slave.c  stdafx.h
tool_src/includes/: MessageCodes.h  Queue.h
